--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gatsby-transformer-sharp": "^5.4.0",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.2",
