feat: markdown style 추가 & about page 구현

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "react/function-component-definition": 0,
     "react/require-default-props": 0,
     "react/jsx-uses-react": 0,
+    "react/no-danger": 0,
     "react/react-in-jsx-scope": 0,
     "import/no-extraneous-dependencies": 0,
     "react-hooks/rules-of-hooks": "error",
