--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-feed": "^5.4.0",
     "gatsby-plugin-image": "^3.4.0",
     "gatsby-plugin-manifest": "^5.4.0",
+    "gatsby-plugin-sass": "^6.6.0",
     "gatsby-plugin-sharp": "^5.4.0",
     "gatsby-plugin-typescript": "^5.4.0",
     "gatsby-remark-images": "^7.4.0",
@@ -28,7 +29,8 @@
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "sass": "^1.58.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.2",
