--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/merriweather": "^4.5.14",
     "@fontsource/montserrat": "^4.5.13",
     "@types/react-responsive": "^8.0.5",
+    "framer-motion": "^9.0.2",
     "gatsby": "^5.4.2",
     "gatsby-plugin-emotion": "^8.5.0",
     "gatsby-plugin-feed": "^5.4.0",
