--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "react/jsx-uses-react": 0,
     "react/no-danger": 0,
     "react/react-in-jsx-scope": 0,
+    "react/jsx-props-no-spreading": 0,
     "import/no-extraneous-dependencies": 0,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error"
