--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,9 +29,11 @@
     "react/no-danger": 0,
     "react/react-in-jsx-scope": 0,
     "react/jsx-props-no-spreading": 0,
+    "react/no-unknown-property": ["error", { "ignore": ["css"] }],
     "import/no-extraneous-dependencies": 0,
     "import/prefer-default-export": 0,
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "error"
+    "react-hooks/exhaustive-deps": "error",
+    "arrow-body-style": 0
   }
 }
