--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-manifest": "^5.4.0",
     "gatsby-plugin-sass": "^6.6.0",
     "gatsby-plugin-sharp": "^5.4.0",
+    "gatsby-plugin-sitemap": "^6.7.0",
     "gatsby-plugin-typescript": "^5.4.0",
     "gatsby-remark-images": "^7.4.0",
     "gatsby-remark-prismjs": "^7.4.0",
