--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-sharp": "^5.4.0",
     "gatsby-plugin-sitemap": "^6.7.0",
     "gatsby-plugin-typescript": "^5.4.0",
+    "gatsby-remark-autolink-headers": "^6.7.0",
     "gatsby-remark-images": "^7.4.0",
     "gatsby-remark-prismjs": "^7.4.0",
     "gatsby-remark-responsive-iframe": "^6.4.0",
