--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sass": "^1.58.0"
   },
   "devDependencies": {
+    "@types/react-dom": "^19.0.2",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^7.32.0",
