--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "import/prefer-default-export": 0,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
-    "arrow-body-style": 0
+    "arrow-body-style": 0,
+    "@typescript-eslint/no-use-before-define": 0
   }
 }
